--- a/src/assets/scss/partials/catalog/_catalog.scss
+++ b/src/assets/scss/partials/catalog/_catalog.scss
@@ -268,6 +268,7 @@
             &_text {
                 font-size: 12px;
                 color: $text-dark;
+                transition: 200ms ease-in-out;
             }
 
             &:hover {
