--- a/src/partials/new-index/new-header.html
+++ b/src/partials/new-index/new-header.html
@@ -11,6 +11,35 @@
                     </a>
 
                     <div class="new-header__top-actions">
+
+                        <button class="new-header__category js-hamburger js-hamburger-header-button new-btn add-class-btn" data-class-target="mainmenu"
+                            data-class-name="active">
+                            <div class="new-header__category-icon">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.26605 0H1.52296C0.68315 0 0 0.68315 0 1.52296V7.26605C0 8.10586 0.68315 8.78901 1.52296 8.78901H7.26605C8.10586 8.78901 8.78901 8.10586 8.78901 7.26605V1.52296C8.78887 0.68315 8.10586 0 7.26605 0Z"
+                                        fill="#EBE2D0" />
+                                    <path
+                                        d="M18.4809 0H12.7378C11.898 0 11.2148 0.68315 11.2148 1.52296V7.26605C11.2148 8.10586 11.898 8.78901 12.7378 8.78901H18.4809C19.3207 8.78901 20.0039 8.10586 20.0039 7.26605V1.52296C20.0039 0.68315 19.3207 0 18.4809 0Z"
+                                        fill="#EBE2D0" />
+                                    <path
+                                        d="M7.26605 11.2144H1.52296C0.68315 11.2144 0 11.8974 0 12.7372V18.4803C0 19.3201 0.68315 20.0033 1.52296 20.0033H7.26605C8.10586 20.0033 8.78901 19.3201 8.78901 18.4803V12.7372C8.78887 11.8974 8.10586 11.2144 7.26605 11.2144Z"
+                                        fill="#EBE2D0" />
+                                    <path
+                                        d="M18.4809 11.2144H12.7378C11.898 11.2144 11.2148 11.8975 11.2148 12.7373V18.4804C11.2148 19.3202 11.898 20.0034 12.7378 20.0034H18.4809C19.3207 20.0033 20.0039 19.3201 20.0039 18.4803V12.7372C20.0039 11.8974 19.3207 11.2144 18.4809 11.2144Z"
+                                        fill="#EBE2D0" />
+                                </svg>
+                            </div>
+                            <div class="new-header__category-text">Каталог</div>
+                            <div class="new-header__category-arrow">
+                                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.33467 -3.20608e-07C7.92933 -3.46602e-07 8.51733 0.0106663 9.09733 0.0306663C12.1027 0.136666 14.532 2.566 14.638 5.57133C14.6587 6.15133 14.6687 6.73933 14.6687 7.334C14.6687 7.92866 14.658 8.51666 14.638 9.09666C14.532 12.102 12.1027 14.5313 9.09733 14.6373C8.51733 14.658 7.92933 14.668 7.33467 14.668C6.74 14.668 6.152 14.6573 5.572 14.6373C2.566 14.5313 0.136667 12.102 0.0306671 9.096C0.0100004 8.516 3.46544e-07 7.928 3.2055e-07 7.33333C2.94556e-07 6.73867 0.0106669 6.15067 0.0306669 5.57067C0.136667 2.566 2.566 0.136666 5.572 0.031333C6.152 0.0106664 6.74 -2.94615e-07 7.33467 -3.20608e-07ZM4.25467 4.48067C3.992 4.764 4.00867 5.20733 4.29267 5.46933L8.33533 9.21533L5.91867 9.46267C5.74267 9.48067 5.588 9.56267 5.47667 9.68333C5.34467 9.82533 5.272 10.022 5.294 10.2307C5.33333 10.6147 5.67667 10.8947 6.06133 10.8547L9.79333 10.4707C10.032 10.4633 10.2527 10.3633 10.4147 10.188C10.576 10.014 10.6593 9.78667 10.6493 9.59666L10.7473 5.79667C10.758 5.41 10.452 5.08867 10.0667 5.07867C9.85667 5.07333 9.66667 5.16067 9.53467 5.30267C9.42333 5.42267 9.35333 5.58267 9.34867 5.76L9.28733 8.18867L5.244 4.44267C4.96067 4.18 4.51733 4.19733 4.25467 4.48067Z"
+                                        fill="#EBE2D0" />
+                                </svg>
+                            </div>
+                        </button>
+
                         <div class="new-header__search">
                             <button type="button" class="new-btn new-header__search-mobile">
                                 <img class="new-header__search-mobile-img" src="assets/images/new-icons/search.svg"
@@ -83,7 +112,6 @@
                         </a>
                     </div>
 
-
                 </div>
             </div>
         </div>
@@ -109,7 +137,7 @@
                                     fill="#EBE2D0" />
                             </svg>
                         </div>
-                        <div class="new-header__category-text">Категории</div>
+                        <div class="new-header__category-text">Каталог</div>
                         <div class="new-header__category-arrow">
                             <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -120,12 +148,12 @@
                         </div>
                     </button>
                     <div class="new-header__menu">
-                        <a href="catalog.html" class="new-header__menu-item">
+                        <!-- <a href="catalog.html" class="new-header__menu-item">
                             <span class="new-header__menu-item-text">
                                 <span class="new-header__menu-item-title">Каталог</span>
                                 <span class="new-header__menu-item-subtitle">Самые низкие цены</span>
                             </span>
-                        </a>
+                        </a> -->
                         <a href="steam.html" class="new-header__menu-item">
                             <span class="new-header__menu-item-text">
                                 <span class="new-header__menu-item-title">Пополнение стим</span>
