--- a/src/partials/new-index/new-blog.html
+++ b/src/partials/new-index/new-blog.html
@@ -121,6 +121,10 @@
                     </div>
                 </div>
             </div>
+            <div class="new-index-mobile__btn">
+                <a href="#" class="new-btn new-btn--grey new-btn--fullwidth">Читать весь блог</a>
+            </div>
         </div>
+
     </div>
 </section>
