--- a/src/partials/new-index/new-steam.html
+++ b/src/partials/new-index/new-steam.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class="new-steam__btn">
+        <div class="new-index-mobile__btn">
             <a href="#" class="new-btn new-btn--grey new-btn--fullwidth">Пополнить</a>
         </div>
     </div>
@@ -131,6 +131,9 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="new-index-mobile__btn">
+            <a href="#" class="new-btn new-btn--grey new-btn--fullwidth">Пополнить</a>
         </div>
     </div>
 </section>
