--- a/src/assets/scss/partials/index/_new-catalog.scss
+++ b/src/assets/scss/partials/index/_new-catalog.scss
@@ -1,7 +1,7 @@
 .new-catalog {
 
   &__block {
-    padding: 15px;
+    padding: 16px;
     background-color: #191816;
     border-radius: 24px;
     margin-top: 40px;
@@ -10,6 +10,7 @@
 
     @include mobile {
       border-radius: 12px;
+      margin-top: 30px;
     }
   }
 
@@ -509,7 +510,7 @@
 
 .new-mobile {
   &__block {
-    padding: 15px;
+    padding: 16px;
     background-color: #191816;
     border-radius: 24px;
     margin-top: 30px;
@@ -518,6 +519,8 @@
 
     @include mobile {
       border-radius: 12px;
+      margin-top: 25px;
+      margin-bottom: 25px;
     }
   }
 
