--- a/src/assets/scss/partials/index/_new-steam.scss
+++ b/src/assets/scss/partials/index/_new-steam.scss
@@ -15,6 +15,9 @@
     @include mobile {
       display: flex;
       flex-direction: column;
+      margin-top: 25px;
+      border-radius: 12px;
+      padding: 12px 12px 16px;
     }
   }
 
@@ -27,6 +30,7 @@
     @include mobile {
       flex-direction: row;
       margin-bottom: 15px;
+      padding: 4px 4px 0;
     }
 
     &-img {
@@ -64,7 +68,6 @@
         margin-top: 0;
 
         .swiper-pagination-bullet {
-          background: #c3b8a2;
           opacity: 0.5;
 
           &.swiper-pagination-bullet-active {
@@ -217,10 +220,14 @@
     margin-bottom: 60px;
     margin-top: 10px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 
     @include mobile {
-      padding: 15px 15px 25px;
-      border-radius: 15px;
+      margin-bottom: 25px;
+      border-radius: 12px;
+      padding: 16px;
     }
   }
 
@@ -245,7 +252,7 @@
     margin-top: 30px;
 
     @include mobile {
-      margin: 20px -20px 0;
+      margin: 20px -20px 20px;
     }
   }
 
