--- a/src/partials/new-index/new-mobile.html
+++ b/src/partials/new-index/new-mobile.html
@@ -46,5 +46,8 @@
             </div>
 
         </div>
+        <div class="new-index-mobile__btn">
+            <a href="#" class="new-btn new-btn--grey new-btn--fullwidth">Все игры</a>
+        </div>
     </div>
 </section>
