--- a/src/partials/new-index/new-reviews.html
+++ b/src/partials/new-index/new-reviews.html
@@ -1,11 +1,9 @@
 <section class="new-reviews container">
     <div class="new-reviews__block">
         <div class="new-reviews__heading">
-            <div class="new-reviews__title">
-                <div class="new-block__title">
-                    <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
-                    <a href="#" class="new-block__title_text">Отзывы на других ресурсах</a>
-                </div>
+            <div class="new-reviews__title new-block__title">
+                <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
+                <a href="#" class="new-block__title_text">Отзывы на других ресурсах</a>
             </div>
             <div class="new-reviews__cards">
                 <a href="#" class="new-reviews__card">
