--- a/src/assets/scss/common/_buttons.scss
+++ b/src/assets/scss/common/_buttons.scss
@@ -33,14 +33,17 @@
 .more-btn {
     font-size: 16px;
     font-weight: 400;
-    padding: 14px 35px;
+    padding: 15px 35px;
     border-radius: 9px;
-    border: 1px solid $text-dark;
+    background-color: #22211E;
+    border: 1px solid transparent;
     line-height: 1;
+    color: #EBE2D0;
+    transition: 300ms ease;
 
     &:hover {
         color: white;
-        border-color: $orange;
+        background-color: $orange;
     }
 }
 
